# SofAR_Project

./: .gitignore  .gitmodules  Doxyfile  README.md  UML v1.drawio  activator1.cpp  activator2.cpp
catkin_ws/devel/: .gitignore  setup.sh
catkin_ws/src/hrp/am_driver/: CMakeLists.txt
catkin_ws/src/labeled_slam/: .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/labeled_slam/launch/: README  labeled_slam.launch  labels_bag.launch  no_merge.launch  record_bag.launch  robom_only.launch  rpi.launch  rtabmapviz.launch  run_bag.launch  test.launch  test_bag.launch  test_bag_labels.launch  test_localize.launch
catkin_ws/src/labeled_slam/msg/: Command.msg
catkin_ws/src/velocity_forwarder/: CMakeLists.txt  package.xml
catkin_ws/src/velocity_forwarder/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  velocity__forwarder_8cpp.html  velocity__forwarder_8cpp__incl.map  velocity__forwarder_8cpp__incl.md5
catkin_ws/src/velocity_forwarder/docs/html/search/: all_1.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js
catkin_ws/src/velocity_forwarder/docs/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex  velocity__forwarder_8cpp.tex  velocity__forwarder_8cpp__incl.md5
docs/: index.html
myworkspace/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
myworkspace/install/: .rosinstall  local_setup.sh  setup.sh
myworkspace/src/myspeechrecognition/: CMakeLists.txt  package.xml
(+288 files in other folders)
